...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bwF-If-KId" secondAttribute="bottom" id="SQn-uh-26h"/>
                            <constraint firstItem="bwF-If-KId" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="d9x-Wl-ZHR"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bwF-If-KId" secondAttribute="trailing" id="fTh-yd-SQt"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Github Trends" id="SZX-tC-OhT"/>
                    <connections>
                        <outlet property="noConnectionView" destination="oaT-xb-Bxi" id="1Lf-ws-78G"/>
                        <outlet property="repoTableView" destination="cvq-Bn-9Pb" id="45I-T9-1fH"/>
                        <outlet property="retryButton" destination="dvp-j2-M8B" id="P4v-EK-aT6"/>
                    </connections>
                </viewController>
...
                                                            <constraint firstAttribute="height" constant="30" id="Fja-De-leI"/>
                                                            <constraint firstAttribute="width" constant="30" id="nWr-Ve-zG1"/>
                                                        </constraints>
                                                    </imageView>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11231 Stars" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7eO-J0-rtO">
                                                        <rect key="frame" x="45" y="11" width="110.5" height="18"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Stars"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ouf-rR-WSb" userLabel="seprator">
                                                        <rect key="frame" x="165.5" y="0.0" width="0.5" height="40"/>
...
                                                            <constraint firstAttribute="width" constant="30" id="jSR-tZ-wfT"/>
                                                            <constraint firstAttribute="height" constant="30" id="pZR-45-foV"/>
                                                        </constraints>
                                                    </imageView>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32112 Forks" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sis-z7-OkX">
                                                        <rect key="frame" x="211" y="11" width="110" height="18"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Forks"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                </subviews>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
