...
    func initializeVariables() {
        repoTableView.register(viewModel.nib, forCellReuseIdentifier: viewModel.reusableIdentifier)
        
        refreshControl.attributedTitle = viewModel.refreshTitle
        refreshControl.addTarget(self, action: #selector(self.refresh(_:)), for: .valueChanged)
        repoTableView.refreshControl = refreshControl
        repoTableView.accessibilityIdentifier = "RepoTableView"
        
        retryButton.layer.borderColor = #colorLiteral(red: 0.3607843137, green: 0.6862745098, blue: 0.3921568627, alpha: 1)
        retryButton.layer.borderWidth = 1
        bindingSetup()
    }
    
...
